[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors  = ["Pranav Verma"]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.12.15"
